[gd_scene load_steps=30 format=2]

[ext_resource path="res://Fonts/DS-DIGIB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Script/SceneManagers/Lobby/LobbyManager.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Righteous-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/PanelGraphics.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="DynamicFont" id=7]
size = 80
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 24.0
content_margin_right = 24.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="DynamicFont" id=14]
size = 32
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 24.0
content_margin_right = 24.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.309804, 0.32549, 1 )

[sub_resource type="DynamicFont" id=16]
size = 18
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 24
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 20
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=19]
default_font = SubResource( 18 )

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=21]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=22]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=24]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=25]
size = 24
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 3 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = -0.000729036
anchor_right = -0.000728989
margin_left = -144.0
margin_top = -97.0
margin_right = 2105.0
margin_bottom = 1221.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OperatorPanel2" type="PanelContainer" parent="."]
margin_left = 0.615204
margin_right = 1920.62
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 493.364, 382.353 )
rect_clip_content = true
size_flags_stretch_ratio = 0.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersPanel" type="PanelContainer" parent="."]
anchor_left = 0.0028464
anchor_top = 0.00390026
anchor_right = 0.0028464
anchor_bottom = 0.00390026
margin_left = 280.535
margin_top = 280.788
margin_right = 791.535
margin_bottom = 818.788
rect_pivot_offset = Vector2( 493.364, 382.353 )
rect_clip_content = true
size_flags_stretch_ratio = 0.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PlayersPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 507.0
margin_bottom = 534.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PlayersPanel/MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 478.0
margin_bottom = 506.0
grow_horizontal = 0
custom_constants/separation = 48

[node name="Title" type="Label" parent="PlayersPanel/MarginContainer/VBoxContainer"]
margin_right = 454.0
margin_bottom = 31.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "WAITING FOR PLAYERS TO JOIN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayersPanel/MarginContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 454.0
margin_bottom = 279.0
rect_min_size = Vector2( 400, 200 )
size_flags_vertical = 0
theme = SubResource( 5 )
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="You" type="PanelContainer" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 454.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer/You"]
margin_left = 12.0
margin_top = 12.0
margin_right = 442.0
margin_bottom = 43.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.309804, 0.32549, 1 )
text = "YOU"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="PanelContainer" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 67.0
margin_right = 454.0
margin_bottom = 122.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer/Player1"]
margin_left = 12.0
margin_top = 12.0
margin_right = 442.0
margin_bottom = 43.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "ONNO"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="PanelContainer" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 67.0
margin_right = 454.0
margin_bottom = 122.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer/Player2"]
margin_left = 12.0
margin_top = 12.0
margin_right = 442.0
margin_bottom = 43.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "ONNO"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3" type="PanelContainer" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 67.0
margin_right = 454.0
margin_bottom = 122.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer/Player3"]
margin_left = 12.0
margin_top = 12.0
margin_right = 442.0
margin_bottom = 43.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "KEVERT"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4" type="PanelContainer" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 67.0
margin_right = 454.0
margin_bottom = 122.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="PlayersPanel/MarginContainer/VBoxContainer/VBoxContainer/Player4"]
margin_left = 12.0
margin_top = 12.0
margin_right = 442.0
margin_bottom = 43.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "KEVERT"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1189.27
margin_top = 132.73
margin_right = 1798.27
margin_bottom = 232.73
custom_fonts/font = SubResource( 7 )
text = "LOBBY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 1188.0
margin_top = 322.426
margin_right = 1391.0
margin_bottom = 363.426
custom_fonts/font = SubResource( 8 )
text = "TEAM NAME: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 1191.58
margin_top = 455.7
margin_right = 1394.58
margin_bottom = 496.7
custom_fonts/font = SubResource( 8 )
text = "MISSION ID:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
anchor_top = 0.00156826
anchor_bottom = 0.00156826
margin_left = 1191.58
margin_top = 589.098
margin_right = 1406.58
margin_bottom = 630.098
custom_fonts/font = SubResource( 8 )
text = "DIFFICULTY: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
anchor_top = 0.00156826
anchor_bottom = 0.00156826
margin_left = 1191.58
margin_top = 714.108
margin_right = 1409.58
margin_bottom = 755.108
custom_fonts/font = SubResource( 8 )
text = "MICROPHONE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamNameInput" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 308.426
margin_right = 1692.0
margin_bottom = 381.426
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "BITs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionID" type="LineEdit" parent="."]
margin_left = 1429.0
margin_top = 441.7
margin_right = 1692.0
margin_bottom = 514.7
custom_styles/read_only = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 0.309804, 0.32549, 1 )
custom_colors/font_color_uneditable = Color( 1, 0.309804, 0.32549, 1 )
text = "772689"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMission" type="Button" parent="."]
margin_left = 1421.43
margin_top = 899.874
margin_right = 1710.43
margin_bottom = 964.874
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
text = "START MISSION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelMission" type="Button" parent="."]
margin_left = 1179.28
margin_top = 918.254
margin_right = 1377.28
margin_bottom = 965.254
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 0.309804, 0.32549, 1 )
text = "CANCEL MISSION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingForHostLbl" type="Label" parent="."]
visible = false
anchor_top = 0.00156826
anchor_bottom = 0.00156826
margin_left = 1155.08
margin_top = 937.711
margin_right = 1737.08
margin_bottom = 968.711
custom_fonts/font = SubResource( 17 )
text = "WAITING FOR THE HOST TO START THE MISSION..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyBtn" type="OptionButton" parent="."]
margin_left = 1430.0
margin_top = 580.732
margin_right = 1612.0
margin_bottom = 648.732
theme = SubResource( 19 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
custom_fonts/font = SubResource( 25 )
custom_constants/hseparation = 10
text = "EASY"
flat = true
items = [ "EASY", null, false, 0, null, "MEDIUM", null, false, 1, null, "HARD", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteBtn" type="CheckButton" parent="."]
margin_left = 1470.38
margin_top = 719.198
margin_right = 1546.38
margin_bottom = 759.198
flat = true
